# Xenity-Review

./: .gitignore  LICENSE  README.md  Xenity_Engine.sln
Doc/: README.md
Doc/Audio/: README.md  audio_source.md
Doc/Debug/: debug.md
Doc/File System/: directory.md  file.md  file_system.md
Doc/Game Elements/: gameobject.md  transform.md
Doc/Graphics/: README.md  camera.md  material.md  texture.md
Doc/Graphics/2D/: billboard_renderer.md  line_renderer.md  sprite_renderer.md
Doc/Graphics/3D/: mesh_renderer.md
Doc/Graphics/Color/: color.md  rgba.md
Doc/Graphics/UI/: text_alignments.md  text_renderer.md  text_renderer_canvas.md
Doc/Input System/: input_system.md
Doc/Lighting/: light.md
Doc/Network/: network.md  socket.md
Doc/Noise/: noise.md
Doc/Scene System/: scene_manager.md
Doc/Time/: time.md
Doc/Vectors/: vector2.md  vector2_int.md  vector3.md  vector4.md
Raw Assets/: dir arrows.blend
Xenity_Engine/: Xenity_Engine.filters  Xenity_Engine.vcxproj  Xenity_Engine.vcxproj.filters
Xenity_Engine/Source/: draw_3D.vsm  glad.c  mainps2.ncpp  xenity.h  xenity_editor.h
Xenity_Engine/Source/editor/: compiler.cpp  compiler.h  editor.cpp  editor.h  file_handler.cpp  file_handler.h  file_reference_finder.cpp  file_reference_finder.h  gizmo.cpp  gizmo.h  platform_settings.cpp  platform_settings.h  tool_mode.h  update_checker.cpp  update_checker.h
Xenity_Engine/Source/editor/asset_modifier/: asset_modifier.cpp  asset_modifier.h
Xenity_Engine/Source/editor/command/: command.cpp  command.h  command_manager.cpp  command_manager.h
Xenity_Engine/Source/editor/cooker/: cooker.cpp  cooker.h
Xenity_Engine/Source/editor/plugin/: api.h  plugin.cpp  plugin.h  plugin_manager.cpp  plugin_manager.h
Xenity_Engine/Source/editor/ui/: editor_dialog.cpp  editor_file_dialog.cpp  editor_ui.cpp  editor_ui.h  editor_ui_drag_drop.cpp  editor_ui_inputs.cpp  editor_ui_map.cpp  editor_ui_tree_item.cpp  reflective_data_to_draw.h
Xenity_Engine/Source/editor/utils/: copy_utils.cpp  copy_utils.h
Xenity_Engine/Source/engine/: api.h  application.cpp  application.h  component.cpp  component.h  constants.h  cpu.h  engine.cpp  engine.h  engine_settings.cpp  engine_settings.h  game_interface.h  missing_script.cpp  missing_script.h  platform.h  test_component.cpp  test_component.h
Xenity_Engine/Source/engine/accessors/: acc_gameobject.cpp  acc_gameobject.h
Xenity_Engine/Source/engine/assertions/: assertions.cpp  assertions.h
Xenity_Engine/Source/engine/asset_management/: asset_manager.cpp  asset_manager.h  code_file.cpp  code_file.h  project_list_item.h  project_manager.cpp  project_manager.h
Xenity_Engine/Source/engine/audio/: audio_clip.cpp  audio_clip.h  audio_clip_stream.cpp  audio_clip_stream.h  audio_manager.cpp  audio_manager.h  audio_source.cpp  audio_source.h
Xenity_Engine/Source/engine/class_registry/: class_registry.cpp  class_registry.h
Xenity_Engine/Source/engine/debug/: crash_handler.cpp  crash_handler.h  debug.cpp  debug.h  memory_info.cpp  memory_info.h  memory_tracker.cpp  memory_tracker.h  performance.cpp  performance.h  stack_debug_object.cpp  stack_debug_object.h
Xenity_Engine/Source/engine/dynamic_lib/: dynamic_lib.cpp  (+1 more)
Xenity_Engine/Source/game_test/: fps_counter.cpp  fps_counter.h  free_move.cpp  free_move.h  game.cpp  game.h  rotate.cpp  rotate.h
Xenity_Engine/Source/ps2/: cpu.cpp
Xenity_Engine/Source/ps3/: cpu.cpp
Xenity_Engine/Source/psp/: callbacks.cpp  callbacks.h  cpu.cpp  video_hardware_dxtn.cpp  video_hardware_dxtn.h
Xenity_Engine/Source/psvita/: cpu.cpp
Xenity_Engine/Source/unit_tests/: unit_test_manager.cpp  unit_test_manager.h
Xenity_Engine/Source/windows/: cpu.cpp
Xenity_Engine/include/: json.hpp  stb_image_write.h
Xenity_Engine/include/glad/: glad.h
Xenity_Engine/libs/: libSDL3.so.0.1.2
Xenity_Engine/libs/x64/: SDL3.lib  SDL3_test.lib
Xenity_Engine/libs/x86/: SDL3.lib  SDL3_test.lib
Xenity_Engine/shaders/: diffuse_specular_shader.fcg  diffuse_specular_shader.vcg
Xenity_Engine_Executable/: CMakeLists.txt  Dockerfile  Makefile.PS3  Xenity_Engine_Executable.rc  Xenity_Engine_Executable.vcxproj  Xenity_Engine_Executable.vcxproj.filters  compile_shaders.sh  main.cpp  resource.h
Xenity_Engine_Executable/engine_assets/empty_default/: .gitignore  class.cpp  class.h  game.cpp  game.h  scene.xen  shader.shader
Xenity_Engine_Executable/icons/: code.psd  icons_colors.txt
Xenity_Engine_Executable/plugins/test/: plugin.cpp  plugin.h
Xenity_Engine_Executable/psvita_images/: template.xml
Xenity_Engine_Executable/public_engine_assets/materials/: lineMaterial._mat  lineMaterial.mat._meta  standardMaterial.mat  standardMaterialOneDirectionalLight._mat  standardMaterialOneDirectionalLight._mat._meta  standardMaterialOneLightEach._mat  standardMaterialOneLightEach._mat._meta  standardMaterialOnePointLight._mat  standardMaterialOnePointLight._mat._meta  standardMaterialOneSpotLight._mat  standardMaterialOneSpotLight.mat._meta  standardVertexLightingMaterial._mat  standardVertexLightingMaterial._mat._meta  unlitMaterial.mat
Xenity_Engine_Executable/public_engine_assets/shaders/: line.shader.meta_  line.shader_  standard.shader  standard_one_directional_light._shader  standard_one_light_each._shader  standard_one_point_light._shader  standard_one_spot_light._shader  standard_one_spot_light.shader._meta  standard_vertex_lighting._shader  standard_vertex_lighting._shader._meta  unlit.shader
Xenity_Engine_Executable/vscodeSample/: c_cpp_properties.json
(+297 files in other folders)
